Fix philosophy page code description paragraph spacing to match container padding

--- a/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
+++ b/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
@@ -379,7 +379,15 @@ div.cCodeDesription.gray {
 .cCodeDesription>div {
     background: #ffffff;
     font-size: 15px;
-    padding: 7px 20px;
+    padding: 7px 15px;
+}
+
+.cCodeDesription>div>p {
+    margin-bottom: 7px;
+}
+
+.cCodeDesription>div>p:last-child {
+    margin-bottom: 0 !important;
 }
 
 .cCodeDesription.gray>div {
